--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Live Video Streamer for Tessel 2, with USB camera (webcam)",
   "main": "index.js",
   "scripts": {
+    "start": "t2 run index.js",
+    "deploy": "t2 push index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
